# ssh_mcp_server

./: README.md  pyproject.toml  requirements.txt  run_server.sh  test.py
ssh_mcp_server/: __init__.py  init.py  server.py
